--- a/DATAVIZ/GeoKeysRadar/index.html
+++ b/DATAVIZ/GeoKeysRadar/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en"><head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UPlanet Geokeys RADAR</title>
