--- a/DATAVIZ/GeoKeysRadar/index.html
+++ b/DATAVIZ/GeoKeysRadar/index.html
@@ -9,8 +9,6 @@
     <link rel="stylesheet" href="index_fichiers/leaflet.css">
     <style>
     html, body {
-        height: 80%;
-        width: 80%;
         margin: 0;
         padding: 0;
     }
@@ -95,7 +93,8 @@
             });
 
             if (closestDistance < 10) {
-                alert("You reach a point of interest!");
+                alert("You reach a UPlanet geoKey!");
+                window.open("https://astroport.copylaradio.com/?uplanet=@&zlat=" + point.lat.toFixed(2) + "&zlon=" + point.lng.toFixed(2));
             }
         }
 
