error log instead of alert

--- a/DATAVIZ/GeoKeysRadar/index.html
+++ b/DATAVIZ/GeoKeysRadar/index.html
@@ -101,7 +101,7 @@
         map.on('locationfound', onLocationFound);
 
         function onLocationError(e) {
-            alert(e.message);
+            console.error("Geolocation error:", e.message);
         }
 
         map.on('locationerror', onLocationError);
