--- a/DATAVIZ/GeoKeysRadar/index.html
+++ b/DATAVIZ/GeoKeysRadar/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en"><head>
-<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+<html lang="en">
+<head>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UPlanet Geokeys RADAR</title>
@@ -33,78 +33,86 @@
 <div id="map-container" style="position: relative;">
     <div id="map" style="width: 100%; height: 100vh;"></div>
 </div>
-    <script src="index_fichiers/leaflet.js"></script>
-    <script>
-        var map = L.map('map').setView([0, 0], 17);
+<script src="index_fichiers/leaflet.js"></script>
+<script>
+    var map = L.map('map').setView([0, 0], 17);
+    var previousLocation = null;
 
-        L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-            maxZoom: 20,
-        }).addTo(map);
+    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+        maxZoom: 20,
+    }).addTo(map);
 
-        // Define custom icon for user's position marker
-        var userIcon = L.icon({
-            iconUrl: 'index_fichiers/marker-icon-2x-green.png',
-            iconSize: [25, 41],
-            iconAnchor: [12, 41],
-            popupAnchor: [1, -34],
-        });
-        var geoIcon = L.icon({
-            iconUrl: 'index_fichiers/marker-icon-2x.png',
-            iconSize: [25, 41],
-            iconAnchor: [12, 41],
-            popupAnchor: [1, -34],
-        });
-        // Get user's location
-        map.locate({ setView: false, maxZoom: 15, watch: true }); // Set watch to true to continuously update location
+    // Define custom icon for user's position marker
+    var userIcon = L.icon({
+        iconUrl: 'index_fichiers/marker-icon-2x-green.png',
+        iconSize: [25, 41],
+        iconAnchor: [12, 41],
+        popupAnchor: [1, -34],
+    });
+    var geoIcon = L.icon({
+        iconUrl: 'index_fichiers/marker-icon-2x.png',
+        iconSize: [25, 41],
+        iconAnchor: [12, 41],
+        popupAnchor: [1, -34],
+    });
+    // Get user's location
+    map.locate({ setView: false, maxZoom: 15, watch: true }); // Set watch to true to continuously update location
 
-        function onLocationFound(e) {
-            var radius = e.accuracy / 2;
-            map.setView(e.latlng, 16); // Center map on user's location and set zoom level
-            L.marker(e.latlng, { icon: userIcon }).addTo(map)
-                .bindPopup("Your location: " + e.latlng.lat.toFixed(6) + ", " + e.latlng.lng.toFixed(6)).openPopup();
+    function onLocationFound(e) {
+        if (previousLocation && e.latlng.lat === previousLocation.lat && e.latlng.lng === previousLocation.lng) {
+            return; // Skip refreshing the map if the location hasn't changed
+        }
 
-            // Calculate direction and distance to all surrounding points
-            var surroundingPoints = [];
+        var radius = e.accuracy / 2;
+        map.setView(e.latlng, 16); // Center map on user's location and set zoom level
+        L.marker(e.latlng, { icon: userIcon }).addTo(map)
+            .bindPopup("Your location: " + e.latlng.lat.toFixed(6) + ", " + e.latlng.lng.toFixed(6)).openPopup();
 
-            // Points with 0.1° precision
-            surroundingPoints.push({ lat: Math.floor(e.latitude * 10) / 10, lng: Math.floor(e.longitude * 10) / 10 }); // Lower left corner
-            surroundingPoints.push({ lat: Math.floor(e.latitude * 10) / 10, lng: (Math.floor(e.longitude * 10) / 10) + 0.1 }); // Lower right corner
-            surroundingPoints.push({ lat: (Math.floor(e.latitude * 10) / 10) + 0.1, lng: Math.floor(e.longitude * 10) / 10 }); // Upper left corner
-            surroundingPoints.push({ lat: (Math.floor(e.latitude * 10) / 10) + 0.1, lng: (Math.floor(e.longitude * 10) / 10) + 0.1 }); // Upper right corner
+        // Calculate direction and distance to all surrounding points
+        var surroundingPoints = [];
 
-            // Points with 0.01° precision
-            surroundingPoints.push({ lat: Math.floor(e.latitude * 100) / 100, lng: Math.floor(e.longitude * 100) / 100 }); // Lower left corner
-            surroundingPoints.push({ lat: Math.floor(e.latitude * 100) / 100, lng: (Math.floor(e.longitude * 100) / 100) + 0.01 }); // Lower right corner
-            surroundingPoints.push({ lat: (Math.floor(e.latitude * 100) / 100) + 0.01, lng: Math.floor(e.longitude * 100) / 100 }); // Upper left corner
-            surroundingPoints.push({ lat: (Math.floor(e.latitude * 100) / 100) + 0.01, lng: (Math.floor(e.longitude * 100) / 100) + 0.01 }); // Upper right corner
+        // Points with 0.1° precision
+        surroundingPoints.push({ lat: Math.floor(e.latitude * 10) / 10, lng: Math.floor(e.longitude * 10) / 10 }); // Lower left corner
+        surroundingPoints.push({ lat: Math.floor(e.latitude * 10) / 10, lng: (Math.floor(e.longitude * 10) / 10) + 0.1 }); // Lower right corner
+        surroundingPoints.push({ lat: (Math.floor(e.latitude * 10) / 10) + 0.1, lng: Math.floor(e.longitude * 10) / 10 }); // Upper left corner
+        surroundingPoints.push({ lat: (Math.floor(e.latitude * 10) / 10) + 0.1, lng: (Math.floor(e.longitude * 10) / 10) + 0.1 }); // Upper right corner
 
-            var closestDistance = Number.MAX_VALUE;
+        // Points with 0.01° precision
+        surroundingPoints.push({ lat: Math.floor(e.latitude * 100) / 100, lng: Math.floor(e.longitude * 100) / 100 }); // Lower left corner
+        surroundingPoints.push({ lat: Math.floor(e.latitude * 100) / 100, lng: (Math.floor(e.longitude * 100) / 100) + 0.01 }); // Lower right corner
+        surroundingPoints.push({ lat: (Math.floor(e.latitude * 100) / 100) + 0.01, lng: Math.floor(e.longitude * 100) / 100 }); // Upper left corner
+        surroundingPoints.push({ lat: (Math.floor(e.latitude * 100) / 100) + 0.01, lng: (Math.floor(e.longitude * 100) / 100) + 0.01 }); // Upper right corner
 
-            surroundingPoints.forEach(point => {
-                var distance = L.latLng(e.latitude, e.longitude).distanceTo(L.latLng(point.lat, point.lng));
-                if (distance < closestDistance) {
-                    closestDistance = distance;
-                }
-                var marker = L.marker([point.lat, point.lng], { icon: geoIcon }).addTo(map);
-                marker.bindPopup("Coordinates: " + point.lat.toFixed(2) + ", " + point.lng.toFixed(2) +
-                    "<br>Distance: " + distance.toFixed(2) + " meters" +
-                    "<h2><a href='https://www.openstreetmap.org/directions?engine=fossgis_osrm_foot&route=" + e.latlng.lat + "%2C" + e.latlng.lng + "%3B" + point.lat + "%2C" + point.lng + "' target='_blank'>Route</a></h2>"
-                ).openPopup();
-            });
+        var closestDistance = Number.MAX_VALUE;
 
-            if (closestDistance < 30) {
-                alert("You reach a UPlanet geoKey!");
-                window.open("https://astroport.copylaradio.com/?uplanet=@&zlat=" + point.lat.toFixed(2) + "&zlon=" + point.lng.toFixed(2));
+        surroundingPoints.forEach(point => {
+            var distance = L.latLng(e.latitude, e.longitude).distanceTo(L.latLng(point.lat, point.lng));
+            if (distance < closestDistance) {
+                closestDistance = distance;
             }
+            var marker = L.marker([point.lat, point.lng], { icon: geoIcon }).addTo(map);
+            marker.bindPopup("Coordinates: " + point.lat.toFixed(2) + ", " + point.lng.toFixed(2) +
+                "<br>Distance: " + distance.toFixed(2) + " meters" +
+                "<h2><a href='https://www.openstreetmap.org/directions?engine=fossgis_osrm_foot&route=" + e.latlng.lat + "%2C" + e.latlng.lng + "%3B" + point.lat + "%2C" + point.lng + "' target='_blank'>Route</a></h2>"
+            ).openPopup();
+        });
+
+        if (closestDistance < 10) {
+            console.log("You reach a point of interest!");
+            window.open("https://astroport.copylaradio.com/?uplanet=@&zlat=" + e.latlng.lat + "&zlon=" + e.latlng.lng);
         }
 
-        map.on('locationfound', onLocationFound);
+        previousLocation = e.latlng; // Update previous location
+    }
 
-        function onLocationError(e) {
-            console.error("Geolocation error:", e.message);
-        }
+    map.on('locationfound', onLocationFound);
 
-        map.on('locationerror', onLocationError);
-    </script>
+    function onLocationError(e) {
+        console.error("Geolocation error:", e.message);
+    }
 
-</body></html>
+    map.on('locationerror', onLocationError);
+</script>
+
+</body>
+</html>
